--- a/src/component/Collection-item/CollectionItem.scss
+++ b/src/component/Collection-item/CollectionItem.scss
@@ -5,7 +5,7 @@
  height: 350px;
  width: 22%;
  background-color: white; 
-
+position: relative;
  .back-image{
     background-position: center;
     background-size: cover;
@@ -13,6 +13,26 @@
     width: 100%;
     margin-bottom: 5%;
  }
+
+ .custom-button{
+    width: 80%;
+    opacity: 0.7;
+    position: absolute;
+    top:255px;
+    left: 10%;
+    display: none;
+ }
+
+ &:hover{
+   .back-image{
+      opacity: 0.7;
+   }
+   .custom-button{
+      opacity: 0.85;
+      display: flex;
+   }
+ }
+
  .collection-footer{
      display: flex;
      flex-direction: row;
