--- a/src/component/Custom-Button/CustomButton.scss
+++ b/src/component/Custom-Button/CustomButton.scss
@@ -6,18 +6,31 @@
     line-height: 50px;
     padding: 0 35px 0 35px;
     font-size: 15px;
-    background-color: black;
+    background-color:#673ab7;
     color: white;
     text-transform: uppercase;
     font-family: 'Julius Sans One', sans-serif;
     font-weight: 600;
     border: none;
     cursor: pointer;
+    display: flex;
+    justify-content: center;
   
     &:hover {
       background-color: white;
-      color: black;
-      border: 1px solid black;
+      color: #673ab7;
+      border: 1px solid #673ab7;
+    }
+    &.inverted{
+      background-color: white;
+      color: #673ab7;
+      border: 1px solid #673ab7;
+  
+      &:hover {
+        background-color:#673ab7;
+        color: white;
+      }
     }
   }
   
+ 
